fixed sizing for projects on mobile

--- a/src/pages/App/MyProjects/MyProjects.css
+++ b/src/pages/App/MyProjects/MyProjects.css
@@ -144,7 +144,7 @@
     .project-img-main:hover {
         border: solid 5px white;
         border-radius: 10px;
-        width: 60vmin;
+        width: 80vmin;
         margin-top: 10px;
         transition: 600ms ease-in-out
     }
